TestSuite/errors/err0344_overloads.pas
begin
  var l := Lst(1,3,5);
  var o := l.Reverse;
end.